<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="reload">Обновить</string>
    <string name="media_lib">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="search_history_header">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="empty_artist">Неизвестный исполнитель</string>
    <string name="empty_track_name">Без названия</string>

    <string name="not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_favorite">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>

    <string name="support_mail">hismram@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="terms_of_use_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
</resources>