<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/base_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment"
>
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/offset_l"
        android:paddingLeft="@dimen/offset_s"
        android:paddingRight="@dimen/offset_s"
    >
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_size_m"
            style="@style/Switcher"
        />
        <TextView
            style="@style/SettingsRow"
            android:id="@+id/share"
            android:text="@string/share_app"
            android:drawableEnd="@drawable/share_icon"
        />
        <TextView
            style="@style/SettingsRow"
            android:id="@+id/write_to_support"
            android:text="@string/write_to_support"
            android:drawableEnd="@drawable/support_icon"
        />
        <TextView
            style="@style/SettingsRow"
            android:id="@+id/terms_of_use"
            android:text="@string/terms_of_use"
            android:drawableEnd="@drawable/arrow_forward_icon"
        />
    </LinearLayout>
</LinearLayout>