<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/offset_m"
    android:background="@color/main_menu_background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/text_size_l"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:height="56dp"
    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        style="@style/MainMenuButton"
        android:text="@string/search"
        app:icon="@drawable/search_icon_24"
    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_lib"
        style="@style/MainMenuButton"
        android:text="@string/media_lib"
        app:icon="@drawable/media_lib_icon"
    />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        style="@style/MainMenuButton"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
    />
</LinearLayout>