<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrow_back_icon"

    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/offset_l"
        android:paddingLeft="@dimen/offset_m"
        android:paddingRight="@dimen/offset_m"
    >

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_size_m"
            app:thumbTint="@color/gray"
            app:trackTint="@color/gray_light"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_row_height"
            android:gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
            android:drawableEnd="@drawable/share_icon"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_row_height"
            android:gravity="center_vertical"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
            android:drawableEnd="@drawable/support_icon"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_row_height"
            android:gravity="center_vertical"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
            android:drawableEnd="@drawable/arrow_forward_icon"
        />
    </LinearLayout>
</LinearLayout>