<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:layout_marginStart="@dimen/offset_3xs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/arrow_back_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/offset_l"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/offset_l"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBorder"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/offset_m"/>

    <ImageView
        android:id="@+id/album_cover"
        android:scaleType="centerCrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/offset_xl"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@id/menu_button"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintVertical_bias="0"
        tools:src="@drawable/album_placeholder"
    />

    <TextView
        android:id="@+id/track_name"
        style="@style/PlayerTrackMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_l"
        app:layout_constraintTop_toBottomOf="@id/album_cover"
        app:layout_constraintBottom_toTopOf="@id/track_artist"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toRightOf="@id/rightBorder"
        android:textSize="@dimen/text_size_l"
        android:text="@string/empty_track_name"
    />

    <TextView
        android:id="@+id/track_artist"
        style="@style/PlayerTrackMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintBottom_toTopOf="@id/play_controls_layout"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toRightOf="@id/rightBorder"
        android:layout_marginTop="@dimen/offset_xs"
        android:textSize="@dimen/text_size_s"
        android:text="@string/empty_artist"
    />

    <FrameLayout
        android:id="@+id/play_controls_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_3xl"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintBottom_toTopOf="@id/timer"
        app:layout_constraintRight_toRightOf="@id/rightBorder">
        <ImageButton
            android:id="@+id/queue"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/queue_icon" />

        <ImageButton
            android:id="@+id/play"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:src="@drawable/play_icon" />

        <ImageButton
            android:id="@+id/favorite"
            android:background="@drawable/round_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/favorite_icon" />
    </FrameLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_4xs"
        app:layout_constraintTop_toBottomOf="@id/play_controls_layout"
        app:layout_constraintBottom_toTopOf="@id/duration_label"
        app:layout_constraintLeft_toLeftOf="@id/leftBorder"
        app:layout_constraintRight_toRightOf="@id/rightBorder"
        android:textSize="@dimen/text_size_s"
        android:textColor="@color/text_base"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:text="0:00"
        tools:text="0:30"
    />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labels_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="label"
        />

    <TextView
        android:id="@+id/duration_label"
        style="@style/PlayerTrackData.Label"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintBottom_toTopOf="@id/album_label"
        app:layout_constraintTag="label"
        android:text="@string/duration" />
    <TextView
        android:id="@+id/track_duration"
        style="@style/PlayerTrackData.Data"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintBottom_toTopOf="@id/track_album"
        app:layout_constraintStart_toStartOf="@id/labels_barrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album_label"
        style="@style/PlayerTrackData.Label"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/duration_label"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintBottom_toTopOf="@id/year_label"
        app:layout_constraintTag="label"
        android:text="@string/album" />
    <TextView
        android:id="@+id/track_album"
        style="@style/PlayerTrackData.Data"
        app:layout_constraintBottom_toTopOf="@id/track_year"
        app:layout_constraintStart_toStartOf="@id/labels_barrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1"
        tools:text="Yesterday (Remastered 2009)Yesterday (Remastered 2009)Yesterday (Remastered 2009)Yesterday (Remastered 2009)Yesterday (Remastered 2009)"/>

    <TextView
        android:id="@+id/year_label"
        style="@style/PlayerTrackData.Label"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/genre_label"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="label"
        android:text="@string/year" />
    <TextView
        android:id="@+id/track_year"
        style="@style/PlayerTrackData.Data"
        app:layout_constraintBottom_toTopOf="@id/track_genre"
        app:layout_constraintStart_toStartOf="@id/labels_barrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1"
        tools:text="1965" />

    <TextView
        android:id="@+id/genre_label"
        style="@style/PlayerTrackData.Label"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/country_label"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="label"
        android:text="@string/genre" />
    <TextView
        android:id="@+id/track_genre"
        style="@style/PlayerTrackData.Data"
        app:layout_constraintBottom_toTopOf="@id/track_country"
        app:layout_constraintStart_toStartOf="@id/labels_barrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1"
        tools:text="Rock" />

    <TextView
        android:id="@+id/country_label"
        style="@style/PlayerTrackData.Label"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/bottomBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTag="label"
        android:text="@string/country" />
    <TextView
        android:id="@+id/track_country"
        style="@style/PlayerTrackData.Data"
        app:layout_constraintBottom_toBottomOf="@id/bottomBorder"
        app:layout_constraintStart_toStartOf="@id/labels_barrier"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintHorizontal_bias="1"
        tools:text="Великобритания"/>

</androidx.constraintlayout.widget.ConstraintLayout>