<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">
        <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/search"
        app:navigationIconTint="@color/icon_base"
        app:navigationIcon="@drawable/arrow_back_icon"
        />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:paddingLeft="@dimen/offset_m"
            android:paddingRight="@dimen/offset_m">
                <FrameLayout
                    style="@style/InputLayout"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/search_input"
                            style="@style/Input"
                            android:layout_width="match_parent"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:singleLine="true"
                            android:hint="@string/search"
                        />
                        <ImageView
                            style="@style/InputCross"
                            android:id="@+id/search_cross"
                            android:visibility="gone"
                        />
                </FrameLayout>
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
                <TextView
                    android:id="@+id/tracks_view_placeholder"
                    style="@style/ListPlaceholderMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/offset_m"
                    android:paddingLeft="@dimen/offset_m"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:drawableTop="@drawable/not_found"
                    android:textAlignment="center"
                    android:text=""
                    tools:text="@string/network_error"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tracks_view_placeholder_reload"
                    style="@style/BaseButton.Reload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/offset_m"
                    android:visibility="gone"
                    android:text="@string/reload"
                />
        </LinearLayout>
</LinearLayout>